// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderEl should return the same component 1`] = `
<Component>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Hola
  </Text>
</Component>
`;

exports[`renderEl should return the string wrap in text component 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  test
</Text>
`;
